# RadioRange

./: .gitignore  LICENSE  MODES.md  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
algorithms/: __init__.py  base_lde.py  chip_lde.py  leading_edge.py  max_peak.py  multipath.py  search_back.py  threshold_lde.py
config/: README.md  defaults.yaml
config/channels/: quick_start_tdl_a.yaml  simple_room_2d.yaml  simple_room_3d.yaml  tdl_a.yaml  two_path.yaml
config/impairments/: full.yaml  none.yaml
config/observation/: explicit.yaml  snr.yaml
config/radio_profiles/: default_radios.yaml
config/runs/: quick_start.yaml  simple_room_2d.yaml  (+3 more)
core/: __init__.py  models.py
environments/: README.md  __init__.py  custom_scene.py  floorplan.py  manual_paths.py  materials.py  persistence.py  registry.py  simple_room.py  sionna_builtin.py  sionna_runner.py  statistical.py  xml_builder.py
examples/: 01_basic_uwb_tdl.py  02_compare_algorithms.py  03_cli_cheatsheet.py  README.md
floorplans/: complex_building_aps.csv  corridor_waypoints.csv  t_junction_waypoints.csv
hardware/: README.md  __init__.py  adc.py  agc.py  antenna.py  clock.py  impairments.py  iq_imbalance.py
scenes/: box_knife_concrete_knife.xml
scripts/: compare_materials.py  monte_carlo_eval.py  rt_cache_interactive.py  run_fingerprint.py  run_impairment_ablation_final.py  run_measure.py  run_trajectory.py
tests/: test_algorithms.py  test_common.py  test_custom_scene.py  test_evaluator.py  test_fingerprint_utils.py  test_floorplan.py  test_hardware.py  test_models.py  test_radio_factory.py  test_runner.py  test_simple_room.py  test_sionna_builtin.py  test_tdl.py
utils/: __init__.py  config.py  evaluator.py  fingerprint.py  floorplan_preview.py  generate_measurements.py  html_report.py  radio_factory.py  runner.py  scene_presets.py  visualizer.py
(+11 files in other folders)
