[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radiorange-sim"
version = "0.1.0"
description = "RF ranging error simulation — ray-tracing, chip-level impairments, LDE algorithms"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "RadioRange-Sim Authors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

# ── Core dependencies (always installed) ──────────────────────────────
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "scipy>=1.10",
    "Pillow>=9.0",
]

# ── Optional dependency groups ─────────────────────────────────────────
[project.optional-dependencies]
# Full ray-tracing + OFDM + interactive visualization
sionna = [
    "sionna>=2.0",
    "trimesh>=4.0",
    "plotly>=6.0",
]
# Development tools
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

# ── CLI entry point ────────────────────────────────────────────────────
[project.scripts]
radiorange = "main:main"

# ── Tool configs ───────────────────────────────────────────────────────
[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["algorithms*", "environments*", "hardware*", "core*", "utils*", "config*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
